Fix overflow scroll bug

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,7 @@
 html {
   background-color: #fff;
   font-size: 62.5%;
-  max-width: 100vw;
   min-height: 100vh;
-  min-width: 100vw;
-  width: 100vw;
 }
 
 body {
@@ -20,15 +17,11 @@ body {
   font-variant-ligatures: none;
   font-weight: 400;
   line-height: 1.4;
-  max-width: 100vw;
   min-height: 100vh;
-  min-width: 100vw;
-  padding: env(safe-area-inset-top) env(safe-area-inset-right)
-    env(safe-area-inset-bottom) env(safe-area-inset-left);
+  padding: 2rem;
   position: relative;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
-  width: 100vw;
 }
 
 h1 {
